cmake_minimum_required(VERSION 3.7.0)
project(VitraeSDK)

add_subdirectory(VitraeEngine)
add_subdirectory(VitraePluginOpenGL)
add_subdirectory(VitraePluginFormGeneration)
add_subdirectory(VitraePluginShadowFiltering)
add_subdirectory(VitraePluginBasicComposition)
add_subdirectory(VitraePluginPhongShading)
add_subdirectory(VitraePluginEffects)
add_subdirectory(VitraeShowcase)